# Seminario-Api-Whatsapp

./: .env  .gitignore  ARQUITECTURA.md  DOCUMENTACION_ENDPOINTS.md  EJEMPLOS.md  EMPIEZA_AQUI.md  INDEX.md  LEEME_PRIMERO.md  POSTMAN_COLLECTION.json  QUICKSTART.md  README.md  RESUMEN_PROYECTO.md  documentacon.md  pyproject.toml  run.sh  test_real_whatsapp.py  test_service.py
src/: config.py  logger.py  models.py  whatsapp_client.py  whatsapp_service.py
tests/: test_whatsapp_service.py
