[tool.poetry]
name = "whatsapp-integration"
version = "0.1.0"
description = "WhatsApp Integration Service using Meta Cloud API"
authors = ["Team 1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

